--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DbContext": "Data Source=DESKTOP-9IJ80IO\\SQLEXPRESS;Initial Catalog=Pots_Db; Integrated Security=True"
+    "DbContext": "Data Source=MSI\\QUANGHUNG;Initial Catalog=Pots_Db; Integrated Security=True"
   }
 }
