--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbContext": "Data Source=DESKTOP-9IJ80IO\\SQLEXPRESS;Initial Catalog=Pots_Db; Integrated Security=True"
+    "Dbcontext": "Server=LUV\\SQLEXPRESS;Database=pots_db;User Id=sa;Password=123;TrustServerCertificate=True;Integrated Security=False;"
+
   }
 }
