update last login time

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Dbcontext": "Server=LUV\\SQLEXPRESS;Database=pots_db;User Id=sa;Password=123;TrustServerCertificate=True;Integrated Security=False;"
+    "DbContext": "Data Source=DESKTOP-9IJ80IO\\SQLEXPRESS;Initial Catalog=pots_db; Integrated Security=True"
 
   }
 }
