--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbContext": "Data Source=DESKTOP-9IJ80IO\\SQLEXPRESS;Initial Catalog=pots_db; Integrated Security=True"
+    "DbContext": "Data Source=MSI\\QUANGHUNG;Initial Catalog=Pots_Db; Integrated Security=True"
 
   }
 }
