Lưu lại thay đổi trong appsettings.json

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DbContext": "Data Source=DESKTOP-9IJ80IO\\SQLEXPRESS;Initial Catalog=Pots_Db; Integrated Security=True"
+    "ConnectionStrings": {
+        "DbContext": "Data Source=DUY\\SQLEXPRESS;Initial Catalog=Pots_Db; Integrated Security=True"
 
-  },
+    },
   "Authentication": {
     "Google": {
       "ClientId": "486727453623-gisg4i179stste58r793ru3j30iasd4k.apps.googleusercontent.com",
