--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,9 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.8",
     "web-vitals": "^4.2.4"
   }
 }
