--- a/back_end/backend/appsettings.json
+++ b/back_end/backend/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DbContext": "Server=DUY\\SQLEXPRESS;Database=Pots_Db;User Id=sa;Password=123;TrustServerCertificate=True"
-    },
+  "ConnectionStrings": {
+    "DbContext": "Data Source=DESKTOP-9IJ80IO\\SQLEXPRESS;Initial Catalog=Pots_Db;Integrated Security=True"
+  },
     "Authentication": {
         "Google": {
             "ClientId": "486727453623-gisg4i179stste58r793ru3j30iasd4k.apps.googleusercontent.com",
