--- a/back_end/backend/appsettings.json
+++ b/back_end/backend/appsettings.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "DbContext": "Data Source=DESKTOP-9IJ80IO\\SQLEXPRESS;Initial Catalog=Pots_Db;Integrated Security=True"
+    "DbContext": "Data Source=MSI\\QUANGHUNG;Initial Catalog=Pots_Db; Integrated Security=True"
   },
-    "Authentication": {
-        "Google": {
-            "ClientId": "486727453623-gisg4i179stste58r793ru3j30iasd4k.apps.googleusercontent.com",
-            "ClientSecret": "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"
-        }
+
+  "Authentication": {
+    "Google": {
+      "ClientId": "486727453623-gisg4i179stste58r793ru3j30iasd4k.apps.googleusercontent.com",
+      "ClientSecret": "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"
     }
+  }
 }
