update user va chinh sua profile

--- a/back_end/backend/appsettings.json
+++ b/back_end/backend/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DbContext": "Data Source=MSI\\QUANGHUNG;Initial Catalog=Pots_Db; Integrated Security=True"
-  },
+    "ConnectionStrings": {
+        "DbContext": "Server=DUY\\SQLEXPRESS;Database=Pots_Db_2;User Id=sa;Password=123;TrustServerCertificate=True;Integrated Security=False;"
+
+    },
     "Authentication": {
         "Google": {
             "ClientId": "486727453623-gisg4i179stste58r793ru3j30iasd4k.apps.googleusercontent.com",
