--- a/back_end/backend/appsettings.json
+++ b/back_end/backend/appsettings.json
@@ -1,10 +1,7 @@
 {
-
-    "ConnectionStrings": {
-        "DbContext": "Server=DUY\\SQLEXPRESS;Database=Pots_Db_2;User Id=sa;Password=123;TrustServerCertificate=True;Integrated Security=False;"
-
-    },
-
+  "ConnectionStrings": {
+    "DbContext": "Data Source=DESKTOP-9IJ80IO\\SQLEXPRESS;Initial Catalog=Pots_Db; Integrated Security=True"
+  },
     "Authentication": {
         "Google": {
             "ClientId": "486727453623-gisg4i179stste58r793ru3j30iasd4k.apps.googleusercontent.com",
