Update BE FE AssignChapter

--- a/back_end/backend/appsettings.json
+++ b/back_end/backend/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DbContext": "Data Source=DESKTOP-9IJ80IO\\SQLEXPRESS;Initial Catalog=Pots_Db; Integrated Security=True"
+    "DbContext": "Data Source=MSI\\QUANGHUNG;Initial Catalog=Pots_Db; Integrated Security=True"
 
   },
 
