fix gen qa by ai by result

--- a/back_end/backend/appsettings.json
+++ b/back_end/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbContext": "Data Source=DESKTOP-9IJ80IO\\SQLEXPRESS;Initial Catalog=Pots_Db; Integrated Security=True"
+    "DbContext": "Server=LUV\\SQLEXPRESS;Database=pots_db;User Id=sa;Password=123;TrustServerCertificate=True;Integrated Security=False;"
 
   },
 
@@ -11,16 +11,4 @@
     }
   }
 }
-//=======
-//    "DbContext": "Data Source=DESKTOP-9IJ80IO\\SQLEXPRESS;Initial Catalog=Pots_Db; Integrated Security=True"
 
-//  },
-
-//    "Authentication": {
-//        "Google": {
-//            "ClientId": "486727453623-gisg4i179stste58r793ru3j30iasd4k.apps.googleusercontent.com",
-//            "ClientSecret": "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"
-//        }
-//    }
-//}
-//>>>>>>> 8c36e9bb0f7ad855890501aee2220ca79b9a7038
