Add BE create AIQuestion

--- a/back_end/backend/appsettings.json
+++ b/back_end/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbContext": "Server=LUV\\SQLEXPRESS;Database=pots_db;User Id=sa;Password=123;TrustServerCertificate=True;Integrated Security=False;"
+    "DbContext": "Data Source=MSI\\QUANGHUNG;Initial Catalog=Pots_Db; Integrated Security=True"
 
   },
 
