update usetlist admin userpackage

--- a/back_end/backend/appsettings.json
+++ b/back_end/backend/appsettings.json
@@ -1,8 +1,9 @@
 {
 
-  "ConnectionStrings": {
-    "DbContext": "Data Source=DESKTOP-9IJ80IO\\SQLEXPRESS;Initial Catalog=Pots_Db_2; Integrated Security=True"
-  },
+    "ConnectionStrings": {
+        "DbContext": "Data Source=DUY\\SQLEXPRESS;Initial Catalog=Pots_Db_2;User Id=sa;Password=123; Integrated Security=True"
+
+    },
 
     "Authentication": {
         "Google": {
